--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:name=".application.ApplicationClass"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="sensorPortrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:theme="@style/Theme.AppSplash"
+        tools:ignore="LockedOrientationActivity,GoogleAppIndexingWarning">
         <activity
             android:name=".presentation.main.MainActivity"
             android:exported="true">
